crates/es-fluent-derive/tests/ui/invalid_literal_namespace.stderr
error: namespace path must not contain '.' or '..' segments
 --> tests/ui/invalid_literal_namespace.rs:4:22
  |
4 | #[fluent(namespace = "../escape")]
  |                      ^^^^^^^^^^^
