crates/es-fluent-derive/tests/ui/invalid_literal_namespace.rs
use es_fluent_derive::EsFluent;

#[derive(EsFluent)]
#[fluent(namespace = "../escape")]
pub struct EscapingNamespace;

fn main() {}
